# Seimei-AI-Core-OLD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
libPShowdown/: generate_tries.py
libPShowdown/include/: libPShowdown.hpp
libPShowdown/include/libPShowdown/: internal.tpp  tries.tpp
old/: SUSPENSION.txt  libPShowdown.tar.xz
seimei/src/: blas.hpp  common.hpp  xoshiropp.hpp
seimei/src/nnet/: activations.hpp  framework.cpp  framework.hpp  layers.hpp
seimei/src/nnet/layers/: activation.hpp  dense.hpp  dense.tpp  lstm.hpp  lstm.tpp
seimei/test/: nnet-iris.cpp  nnet-quick.cpp
temp/: serialize-battle.cpp
